--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PsicoBrain</string>
+    <string name="text_go_login">Si ya dispone de cuenta inicia secion aqui</string>
+    <string name="btn_singup">registrarme</string>
+    <string name="textViewSingup">Si aun no tienes cuenta registrate aqui</string>
 </resources>
